--- a/monjosh/Dockerfile
+++ b/monjosh/Dockerfile
@@ -1,18 +1,11 @@
-FROM python:3.7-alpine
-WORKDIR /code
-ENV FLASK_APP app.py
-ENV FLASK_RUN_HOST 0.0.0.0
-RUN apk add --no-cache gcc
-RUN apk add --no-cache \
-        libressl-dev \
-        musl-dev \
-        libffi-dev && \
-    pip install --no-cache-dir cryptography==2.9 && \
-    apk del \
-        libressl-dev \
-        musl-dev \
-        libffi-dev
+FROM python:3.8.0
+
+WORKDIR /user/src/app
+
 COPY requirements.txt requirements.txt
+
 RUN pip install -r requirements.txt
+
 COPY . .
-CMD ["flask", "run"]
+
+ENTRYPOINT ["python", "app.py"]
