--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,11 @@
-# Docker
-# Build a Docker image 
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+FROM python:3.8.0
 
-trigger:
-- master
+WORKDIR /user/src/app
 
-resources:
-- repo: self
+COPY requirements.txt requirements.txt
 
-variables:
-  tag: '$(Build.BuildId)'
+RUN pip install -r requirements.txt
 
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:  
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/monjosh/Dockerfile'
-        tags: |
-          $(tag)
+COPY . .
+
+ENTRYPOINT ["python", "app.py"]
