--- a/monjosh/Dockerfile
+++ b/monjosh/Dockerfile
@@ -7,5 +7,5 @@ COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
 COPY . .
-
+EXPOSE 80
 ENTRYPOINT ["python", "app.py"]
