cambios docker image

--- a/monjosh/Dockerfile
+++ b/monjosh/Dockerfile
@@ -1,16 +1,11 @@
-FROM alpine:latest
+FROM python:3.8.0
 
-RUN apk add --no-cache python3-dev \
-    && pip3 install --upgrade pip
+WORKDIR /user/src/app
 
-WORKDIR /app
+COPY requirements.txt requirements.txt
 
-COPY . /app
+RUN pip install -r requirements.txt
 
-RUN pip3 --no-cache-dir install -r requirements.txt                                                                            
+COPY . .
 
-EXPOSE 5000
-
-ENTRYPOINT  ["python3"]
-
-CMD ["app.py"]
+ENTRYPOINT ["python", "app.py"]
